<resources>
    <string name="app_name">RGroup</string>
    <string name="cell_no">Cell Number</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="pin">Pin</string>
    <string name="verify_pin">Verify Pin</string>
    <string name="register">Register</string>
    <string name="already_register">I am already registered</string>
    <string name="invite_friend">Invite A Friend</string>
    <string name="help">Help</string>
    <string name="exit">Exit</string>
    <string name="login">Login</string>
    <string name="forgot_pin">Forgot your Pin?</string>
    <string name="social_signin">Or sign in a social account</string>
    <string name="create_acc">Do not have an account? Create Account.</string>
    <string name="data_purchase">Airtime/data purchase</string>
    <string name="header_data_purchase">Data Purchase</string>
    <string name="header_electricity">Water &amp; Electricity</string>
    <string name="header_rica">Rica Prepaid sim cards</string>
    <string name="header_water_bill">Water Bill</string>
    <string name="header_lotto_ticket">Lotto Tickets</string>
    <string name="header_notification">Push Notification</string>
    <string name="header_app_setting">App Settings</string>
    <string name="prepaid_electricity"> Water &amp; Electricity</string>
    <string name="rica">Rica</string>
    <string name="water_bill">Bill BEE</string>
    <string name="lotto_tickets">Lotto Tickets</string>
    <string name="loyalty_points">Loyalty Points</string>
    <string name="logout">Logout</string>
    <string name="meter_number">Meter Number</string>
    <string name="amount">Amount</string>
    <string name="pay">Submit</string>
    <string name="municipal_number">Enter Municipal Number</string>
    <string name="choose_mobile">Choose the mobile network</string>
    <string name="last_digits">Last four digits of the SIM</string>
    <string name="full_number">full SIM Card Number</string>
    <string name="south_african_bank">South African ID Book</string>
    <string name="african_number">African ID Number</string>
    <string name="passport">Passport</string>
    <string name="country">Country</string>
    <string name="passport_number">Passport Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="street_address">Enter the street address</string>
    <string name="town_city">Enter the town or City</string>
    <string name="postal_code">Postal Code</string>
    <string name="submit">Submit</string>
    <string name="notification">Notifications :</string>
    <string name="static_content">Static Content</string>
    <string name="notification_title">Notification Title</string>
    <string name="number">Cell Number</string>
    <string name="back_exit">Please click BACK again to exit</string>
    <string name="number_error_msg">Please enter cell number</string>
    <string name="password_error_msg">Please enter pin</string>
    <string name="name_error_msg">Please enter name</string>
    <string name="last_name_error_msg">Please enter surname</string>
    <string name="confirm_pass_msg">Please enter verify pin</string>
    <string name="valid_mobile">Please enter a valid cell number</string>
    <string name="amount_error_msg">Please enter amount</string>
    <string name="combination_msg">Pin and verify pin does not match.</string>
    <string name="remember">Remember my</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="bet_cost">Bet Cost:</string>
    <string name="transaction_fee">Transaction Fee:</string>
    <string name="total_cost">Total Cost:</string>
    <string name="payment_due">Payment Due:</string>
    <string name="spin">Spin</string>
    <string name="buy">Buy</string>
    <string name="select_ball">Select Ball</string>
    <string name="pay_prinnt">Pay &amp; Print</string>
    <string name="exit_msg">Are you sure you want to EXIT</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="delete_lotto_ticket_msg">Are you sure you want to delete lotto ticket?</string>
    <string name="lotto_max_msg">You can add maximum 9 lotto ticket</string>
    <string name="lotto_min_msg">There should be at least one lotto ticket.</string>
    <string name="electricity_meter_empty_msg">Please enter electricity meter number.</string>
    <string name="electricity_meter_valid_msg">Please enter valid electricity meter number.</string>
    <string name="amoutn_valid_msg">Please enter valid amount.</string>
    <string name="lotto_ticket_position">1</string>
    <string name="balance">Balance</string>
    <string name="lotto_ticket_random_number_list">2</string>
    <string name="static_content_msg">Static content is part of every website. In a portal site, static content can be rendered as static page or it can be added to specific content areas on a page.
To include, update, and administer your static content pages, you can use any of the portal administration tools, Manage Pages portlet, XML configuration interface, or the Portal Scripting Interface.</string>
    <string name="min_password_msg">Pin must be 6 characters long</string>
    <string name="choose_network">Choose the mobile network</string>
    <string name="vodacom">Vodacom</string>
    <string name="mtn">MTN</string>
    <string name="cell">Cell</string>
    <string name="beta">8 Beta</string>
    <string name="telkom">Telkom</string>
    <string name="world_call">world call</string>
    <string name="neotel">Neotel</string>
    <string name="virgin">Virgin mobile</string>
    <string name="unipin">Unipin</string>
    <string name="network_validation_msg">Please choose the mobile network</string>
    <string name="last_sim_empty_msg">Please enter the last four digits SIM number</string>
    <string name="full_sim_empty_msg">Please enter the full SIM card number</string>
    <string name="africa_id_empty_msg">Please enter African id number</string>
    <string name="first_name_empty_msg">Please enter first name</string>
    <string name="last_name_empty_msg">Please enter last name</string>
    <string name="street_empty_msg">Please enter the street address</string>
    <string name="town_city_empty_msg">Please enter the town or city</string>
    <string name="postal_code_empty_msg">Please enter postal code</string>
    <string name="login_remeber_me">Cell number &amp; pin</string>
    <string name="select_number_error_msg">You can select only 6 digits.</string>
    <string name="already_select_number_erroe_msg">You have already select this number</string>
    <string name="no_internet_connection">No internet connection available</string>
    <string name="networks">Networks</string>
    <string name="airtime">Airtime</string>
    <string name="own_amount">Own Amount</string>
    <string name="data">Data</string>
    <string name="select_amount">Select Amount</string>
    <string name="r">R</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="send">Send</string>
    <string name="day_night_bundles">Daily/Night Bundles</string>
    <string name="monthly_bundle">Monthly Bundles</string>
    <string name="power_bundle">Data/Power Bundles</string>
    <string name="data_bundle">Data Bundles</string>
    <string name="free_me_bundle">Free-Me/Bundles</string>
    <string name="daily_weekend_bundle">Daily/Weekend Bundles</string>
    <string name="all_network_bundle">All Networks Bundles</string>
    <string name="all_in_one">All-in-1/shout-Out Bundles</string>
    <string name="cell_c">Cell c</string>
    <string name="telkom_mobile">Telkom Mobile</string>
    <string name="report">Reports</string>
    <string name="balance_enquiry">Balance Enquiry</string>
    <string name="credit_history">Credit History</string>
    <string name="re_print">Re-Print</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="last_deposit">Last Deposit</string>
    <string name="get_report">Get Report</string>
    <string name="select_date_from">Select From Date</string>
    <string name="select_time_from">Select From Time</string>
    <string name="select_date_to">Select To Date</string>
    <string name="select_time_to">Select To Time</string>
    <string name="dateformat">EEEE, MMMM dd, yyyy</string>
    <string name="timeformat">HH:mm</string>
    <string name="from_date_empty_msg">Please select from date</string>
    <string name="from_time_empty_msg">Please select from time</string>
    <string name="to_date_empty_msg">Please select to date</string>
    <string name="to_time_empty_msg">Please select to time</string>
    <string name="print">Print</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="vendor_id">Vendor ID</string>
    <string name="serial_number">Serial Number</string>
    <string name="account_id">Account ID</string>
    <string name="buffer_stock">Buffer Stock</string>
    <string name="power_bundles">Power Bundles</string>
    <string name="daily_bundles">Daily Bundles</string>
    <string name="night_bundles">Night Bundles</string>
    <string name="all_in_one_bundles">All-in-1 Bundles</string>
    <string name="shout_out_bundles">Shout-Out Bundles</string>
    <string name="free_me_all">Free-Me All Networks</string>
    <string name="hourly_all">Hourly All Networks</string>
    <string name="daily_all">Daily All Networks</string>
    <string name="weekend_all">Weekend All Networks</string>
    <string name="type_text">Text Typeface</string>
    <string name="characterset">Char Set</string>
    <string name="size_text">Text Size</string>
    <string name="bold_text">bold</string>
    <string name="underline_text">underline</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="text_title">Text Test</string>
    <string name="toast_2">The service has been disconnected!</string>
    <string name="toast_3">Bluetooth device is unavailable</string>
    <string name="toast_4">Bluetooth device not detected. Please open Bluetooth!</string>
    <string name="toast_5">Not Found InnterPrinter!</string>
    <string name="toast_6">Bluetooth connect failed!</string>
    <string name="contact_us">Contact Us</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="web">Web:</string>
    <string name="banking_details">Banking Details for deposits: </string>
    <string name="f_n_b">FNB: </string>
    <string name="a_b_s_a">ABSA: </string>
    <!--print content-->
    <string name="text_print">欢迎光临(Simplified Chinese)\n歡迎光臨（traditional chinese）\nWelcome(English)\n어서 오세요.(Korean)\nいらっしゃいませ(Japanese)\nWillkommen in der(Germany)\nSouhaits de bienvenue(France)\nยินดีต้อนรับสู่(Thai)\nДобро пожаловать(Russian)\nBenvenuti a(Italian)\nvítejte v(Czech)\nBEM - vindo Ao(Portutuese)\nمرحبا بكم في(Arabic)\n</string>

</resources>
