<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <com.rechargeapp.customview.CustomTextView
        android:id="@+id/tv_first"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:background="@color/darkBlue"
        android:padding="15dp"
        android:gravity="center"
        android:textColor="@color/whiteHintColor"
        android:textSize="@dimen/text_14sp"
        android:text="@string/already_register"/>

    <com.rechargeapp.customview.CustomTextView
        android:id="@+id/tv_sec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:padding="15dp"
        android:textAllCaps="true"
        android:textColor="@color/whiteHintColor"
        android:textSize="@dimen/text_14sp"
        android:text="@string/help"/>

    <View
        android:layout_width=".5dp"
        android:layout_height="match_parent"
        android:background="@color/darkBlue"/>

    <com.rechargeapp.customview.CustomTextView
        android:id="@+id/tv_third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:padding="15dp"
        android:textAllCaps="true"
        android:textColor="@color/whiteHintColor"
        android:textSize="@dimen/text_14sp"
        android:text="@string/exit"/>

</LinearLayout>
